# ID.SoundWeaver

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  gpu_mem.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_task_duration.py
app/: __init__.py  alignment.py  async_utils.py  dependencies.py  errors.py  main.py  schemas.py  settings.py
app/api/: transcriptions.py  uploads.py
app/asr/: __init__.py  gigaam_service.py
app/audio/: processing.py
app/db/: models.py  repositories.py  session.py
app/diarization/: __init__.py  pyannote_service.py
app/storage/: minio.py
app/tasks/: celery_app.py  preload_models.py  transcription.py
docs/: api.md
docs/superpowers/specs/: 2026-04-21-soundweaver-microservice-design.md  2026-04-22-async-parallel-transcription-design.md
tests/: conftest.py  test_alignment.py  test_api_transcriptions.py  test_api_uploads.py  test_async_utils.py  test_audio_processing.py  test_dockerfile.py  test_gigaam_service.py  test_packaging.py  test_queue.py  test_repositories.py  test_schemas.py  test_settings.py  test_storage_minio.py  test_worker_flow.py
