[project]
name = "id-soundweaver"
version = "0.1.0"
description = "GPU speech-to-text microservice with optional speaker diarization."
requires-python = ">=3.10,<3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "celery[redis]>=5.4,<6.0",
  "redis>=5.0,<6.0",
  "minio>=7.2,<8.0",
  "numpy>=1.26,<3.0",
  "soundfile>=0.12,<1.0",
  "torch",
  "torchaudio",
  "gigaam",
  "pyannote.audio",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "httpx>=0.27,<1.0",
  "ruff>=0.6,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
