[project]
name = "id-soundweaver"
version = "0.1.0"
description = "GPU speech-to-text microservice with optional speaker diarization."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "hydra-core",
    "omegaconf",
    "sentencepiece",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "pyannote-audio>=4.0.4",
    "scipy>=1.17.1",
    "sentencepiece>=0.2.1",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "transformers==4.57.1",
    "torchcodec==0.7.0",
    "soundfile>=0.13.1",
]
