[project]
name = "id-soundweaver"
version = "0.1.0"
description = "GPU speech-to-text microservice with optional speaker diarization."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "fastapi>=0.136.0",
    "celery>=5.6.3",
    "redis>=7.4.0",
    "aioboto3>=15.5.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.21.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.49",
    "celery-types>=0.26.0",
    "aiofiles>=25.1.0",
    "botocore>=1.40.61",
    "alembic>=1.18.4",
    "uvicorn>=0.46.0",
]

[project.optional-dependencies]
worker = [
    "gigaam",
    "hydra-core",
    "numpy>=2.4.4",
    "omegaconf",
    "pyannote-audio>=4.0.4",
    "scipy>=1.17.1",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchcodec==0.7.0",
    "transformers==4.57.1",
]

[dependency-groups]
dev = [
    "celery-types>=0.26.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "notebook>=7.5.5",
    "pytest>=9.0.3",
]

[tool.uv.sources]
gigaam = { git = "https://github.com/salute-developers/GigaAM.git" }
